avance bien insano de la web

--- a/views/admin/plantilla.html
+++ b/views/admin/plantilla.html
@@ -12,23 +12,7 @@
 <body>
     <!-- Contenido principal del documento -->
     <main>
-        <div class="login-box ">
-            <h2 id="mainTitle"></h2>
-            <form autocomplete="off" id="loginForm">
-                <div class="user-box">
-                    <input type="email" name="correoAdmin" autocomplete="off" required>
-                    <label>Correo Electrónico</label>
-                </div>
-                <div class="user-box">
-                    <input type="password" name="claveAdmin" autocomplete="off" required>
-                    <label>Contraseña</label>
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary"><i class="bi bi-send"></i> Enviar</button>
-                </div>
-            </form>
 
-        </div>
 
     </main>
 
@@ -41,7 +25,7 @@
     <!-- Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
     <!-- Llamada al controlador de la página web -->
-    <script type="text/javascript" src="../../controllers/admin/index.js"></script>
+    <!-- ! cambiar el link js para el controntrolador -->
 
 </body>
 
