--- a/views/admin/plantilla.html
+++ b/views/admin/plantilla.html
@@ -7,12 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../resources/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../resources/css/general.css">
+    <link rel="stylesheet" href="../../resources/css/bootstrap-icons.min.css">
 </head>
 
 <body>
     <!-- Contenido principal del documento -->
     <main>
-
+        <h2 id="mainTitle"></h2>
 
     </main>
 
