avance en administradores

--- a/views/admin/signup.html
+++ b/views/admin/signup.html
@@ -28,7 +28,7 @@
                                             <label for="imagenAdmin" style="cursor: pointer;">
                                                 <img id="imagenMuestra"
                                                     class="rounded mx-auto d-block img-fluid mt-3 border border-3 border-secondary-subtle rounded-circle imagen_R"
-                                                    src="../../resources/img/usuario.png" alt="..." width="200px"
+                                                    src="../../resources/error/images/404Administrador.png" alt="..." width="200px"
                                                     height="200px">
                                             </label>
                                             <input id="imagenAdmin" type="file" name="imagenAdmin"
