--- a/views/admin/administradores.html
+++ b/views/admin/administradores.html
@@ -126,63 +126,52 @@
                                                         Administrador</h3>
                                                     <img id="imagenMuestra"
                                                         class="rounded  mx-auto d-block img-fluid mt-3 border border-3 border-secondary-subtle rounded-circle imagen_R"
-                                                        src="../../resources/error/images/404Administrador.png" alt="..." width="200px"
-                                                        height="200px">
-                                                    <input id="imagenAdministrador" type="file" name="imagenAdministrador"
-                                                        class="d-none form-control" accept=".png, .jpg">
+                                                        src="../../resources/error/images/404Administrador.png"
+                                                        alt="..." width="200px" height="200px">
+                                                    <input id="imagenAdministrador" type="file"
+                                                        name="imagenAdministrador" class="d-none form-control"
+                                                        accept=".png, .jpg">
                                                 </label>
                                             </div>
                                             <div class="col-6">
                                                 <label class="form-label">Nombre(s)</label>
-                                                <input id="nombreAdministrador" name="nombreAdministrador" class="form-control"
-                                                    autocomplete="off" required oninput="formatAlphabetic(this)">
+                                                <input id="nombreAdministrador" name="nombreAdministrador"
+                                                    class="form-control" autocomplete="off" required
+                                                    oninput="formatAlphabetic(this)">
                                             </div>
                                             <div class="col-6">
                                                 <label class="form-label">Apellido(s)</label>
-                                                <input id="apellidoAdministrador" name="apellidoAdministrador" autocomplete="off"
-                                                    class="form-control" required oninput="formatAlphabetic(this)">
+                                                <input id="apellidoAdministrador" name="apellidoAdministrador"
+                                                    autocomplete="off" class="form-control" required
+                                                    oninput="formatAlphabetic(this)">
                                             </div>
-                                        </div>
-                                        <div class="col-12 mt-3">
-                                            <label class="form-label">Correo electronico</label>
-                                            <input id="correoAdministrador" name="correoAdministrador" class="form-control"
-                                                autocomplete="off" required oninput="formatEmail(this)">
-                                        </div>
-                                        <div class="col-12 mt-3">
-                                            <label class="form-label">Numero telefono</label>
-                                            <input id="correoAdministrador" name="correoAdministrador" class="form-control"
-                                                autocomplete="off" required oninput="formatEmail(this)">
+                                            <div class="col-6 mt-3">
+                                                <label class="form-label">Nombre usuario</label>
+                                                <input id="usuarioAdministrador" name="usuarioAdministrador"
+                                                    class="form-control" autocomplete="off" required>
+                                            </div>
+                                            <div class="col-6 mt-3">
+                                                <label class="form-label">Numero telefono</label>
+                                                <input id="telefonoAdministrador" name="telefonoAdministrador"
+                                                    class="form-control" autocomplete="off" required
+                                                    oninput="formatEmail(this)">
+                                            </div>
+                                            <div class="col-12 mt-3">
+                                                <label class="form-label">Correo electronico</label>
+                                                <input id="correoAdministrador" name="correoAdministrador"
+                                                    class="form-control" autocomplete="off" required
+                                                    oninput="formatEmail(this)">
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="row">
-                                                <div class="col-6 mt-3">
-                                                    <label class="form-label">Documento de identidad</label>
-                                                    <input id="duiAdministrador" name="duiAdministrador" class="form-control"
-                                                        autocomplete="off" required oninput="formatDui(this)">
-                                                </div>
-                                                <div class="col-6 mt-3">
-                                                    <label class="form-label">Fecha de nacimiento</label>
-                                                    <input id="fechaAdministrador" name="fechaAdministrador" type="date"
-                                                        autocomplete="off" class="form-control" required
-                                                        oninput="validarFecha(this)">
-                                                </div>
-                                            </div>
-                                            <div class="form-check form-switch form-check-reverse mt-3">
-                                                <input class="form-check-input" type="checkbox" id="estadoAdministrador"
-                                                    name="estadoAdministrador" checked>
-                                                <label class="form-check-label" for="estadoAdministrador">Estado</label>
-                                            </div>
-                                            <div class="row mt-3">
-                                                <div class="col-6"></div>
-                                                <div class="col-6 text-end">
-                                                    <button type="submit" class="btn btn-primary ps-4 pe-4">
-                                                        <i class="bi bi-person-fill-add me-1"></i> Aceptar
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="row mt-3">
+                                    <div class="col-12 text-end">
+                                        <button type="submit" class="btn btn-primary ps-4 pe-4">
+                                            <i class="bi bi-person-fill-add me-1"></i> Aceptar
+                                        </button>
                                     </div>
                                 </div>
                             </div>
