avance en admin y los cables (estetica del header terminada)

--- a/views/admin/empleados.html
+++ b/views/admin/empleados.html
@@ -61,7 +61,7 @@
             <div id="tableBody" class=" justify-content-center row">
 
                 <!-- color oscuro serán las cards de información de los empleados -->
-                <div class="col-12 card mt-2 text-bg-dark" id="searchForm">
+                <!-- <div class="col-12 card mt-2 text-bg-dark" id="searchForm">
                     <div class="row justify-content-center align-items-center">
                         <div class="col-12 mt-3 d-flex justify-content-center align-items-center"
                             style="height: 300px; width: 300px;">
@@ -101,7 +101,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
 
             </div>
