--- a/views/admin/cables.html
+++ b/views/admin/cables.html
@@ -28,31 +28,32 @@
         <div class="row">
             <form class="col-sm-12 col-md-12 col-lg-10" id="searchForm">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12 mt-5">
                         <input type="search" class="form-control custom-input border-2" id="search" name="search"
                             placeholder="Nombre o Apellido" required>
                     </div>
-                    <div class="col-6 d-flex flex-column align-items-start">
-                        <h3 class="mb-3">Administrar tipos de cables</h3>
-                        <div class="btn-group">
+                    <div class="col-lg-3 col-md-3 col-sm-6 d-flex flex-column align-items-start">
+                        <div class="btn-group mt-5">
                             <button type="submit" class="btn btn-success">
                                 <i class="bi bi-search"></i>
                             </button>
-                            <button type="reset" class="btn btn-secondary" onclick="fillTable()">
+                            <button type="button" class="btn btn-secondary" onclick="fillTable()">
                                 <i class="bi bi-arrow-counterclockwise"></i>
                             </button>
                             <button type="button" class="btn btn-warning" onclick="openCreate()">
                                 <i class="bi bi-clipboard-plus"></i>
                             </button>
-                            <button type="submit" class="btn btn-info" onclick="openCreate()">
+                            <button type="button" class="btn btn-info" onclick="openCreate()">
                                 <i class="bi bi-sort-numeric-down"></i>
-                            </button>
-                            <button type="reset" class="btn btn-secondary" onclick="fillTable()">
-                                <i class="bi bi-bookmark-plus"></i>
                             </button>
                         </div>
                     </div>
-
+                    <div class="col-lg-3 col-md-3 col-sm-6">
+                        <h3 class="mb-3">Administrar tipos de cables</h3>
+                            <button type="reset" class="btn btn-secondary" onclick="window.location.href='../admin/tiposCables.html'">
+                                <i class="bi bi-bookmark-plus"></i>
+                            </button>
+                    </div>
                 </div>
             </form>
         </div>
