categoria cables scrud terminado correctamente

--- a/views/admin/tiposCables.html
+++ b/views/admin/tiposCables.html
@@ -61,7 +61,7 @@
 
         <!-- Modal agregar Administrador -->
         <div class="modal fade" id="saveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-sm">
+            <div class="modal-dialog modal-dialog-centered modal-md">
                 <div class="modal-content bg-dark text-white">
                     <!-- Formulario saveForm -->
                     <form id="saveForm">
@@ -101,7 +101,7 @@
                                             </div>
                                             <div class="col-12">
                                                 <label class="form-label">Descripción categoría</label>
-                                                <textarea name="apellidoAdministrador" id="descripcionCategoria"
+                                                <textarea name="descripcionCategoria" id="descripcionCategoria"
                                                     autocomplete="off" class="form-control" required></textarea>
                                             </div>
                                         </div>
