Scrud terminado, solo falta boton de retiro de material

--- a/views/admin/cables.html
+++ b/views/admin/cables.html
@@ -101,9 +101,9 @@
                                             <select id="estadoCable" name="estadoCable" class="form-select"
                                                 autocomplete="off" required>
                                                 <option selected>Seleccione un estado</option>
-                                                <option value="Nuevo">Nuevo</option>
-                                                <option value="En uso">En uso</option>
-                                                <option value="En ruta">En ruta</option>
+                                                <option value="0">Nuevo</option>
+                                                <option value="1">En uso</option>
+                                                <option value="2">En ruta</option>
                                             </select>
                                         </div>
                                         <div class="col-6">
