--- a/views/admin/perfil.html
+++ b/views/admin/perfil.html
@@ -14,6 +14,174 @@
     <!-- Contenido principal del documento -->
     <main>
         <h2 id="mainTitle"></h2>
+        <div class="d-flex justify-content-center">
+            <form class="row d-flex justify-content-center text-center col-7 " id="profileForm">
+                <div class="col-12 d-flex justify-content-center">
+                    <div>
+                        <h3 for="profileImage" class="form-label d-block display-6">Imagen perfil</h3>
+                        <div class="rounded-circle border overflow-hidden" style="width: 200px;">
+                            <img src="../../resources/images/error/404Administrador.png" alt="Imagen de perfil"
+                                id="profileImage" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12">
+                    <h2 for="inputField1" class="form-label display-6">Datos Empleado </h2>
+                    <h2 for="">Nombres</h2>
+                    <p class="texto-perfil" id="nombreAdministrador"></p>
+                    <p id="apellidoAdministrador"></p>
+
+                    <h2 for="">Numero de teléfono</h2>
+                    <p id="telefonoAdministrador"></p>
+
+                    <h2 for="">usuario</h2>
+                    <p id="usuarioAdministrador"></p>
+
+                    <h2 for="">Correo electrónico</h2>
+                    <p id="correoAdministrador"></p>
+                </div>
+
+            </form>
+            <div class="col-12">
+                <h4 for="input  Field1" class="form-label display-6 mb-4">Historial Administrador</h4>
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseCables" aria-expanded="false" aria-controls="collapseCables">
+                                Cables
+                            </button>
+                        </h2>
+                        <div id="collapseCables" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <div class="row" id="cablesBody">
+
+                                    <div class="col-lg-4 col-md-12 col-sm-12">
+                                        <div class="d-flex justify-content-center align-items-center rounded-circle border overflow-hidden"
+                                            style="width: 200px; height: 200px;">
+                                            <img src="../../resources/images/profile/user.png" alt="Imagen de Historial"
+                                                id="cablesImage" class="img-fluid">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-8 col-md-12 col-sm-12">
+                                        <h5 class="">Nombre del cable</h5>
+                                        <p class="card-title ">${row.nombre_cable}</p>
+                                        <h5 class="">Descripción del cable</h5>
+                                        <p class="card-text ">${row.descripcion_cable}</p>
+                                        <h5 class="">Longitud cable</h5>
+                                        <p class="card-text ">${row.longitud_cable} Metros MT.</p>
+                                        <h5 class="">Estado del cable</h5>
+                                        <p class="card-text "><i class="${icon}"></i></p>
+                                    </div>
+                                    <!-- * próximamente -->
+                                    <!-- <button type="button" class="btn btn-info mt-4">Mas información</button> -->
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                Cajas de contenido
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, iure tenetur?
+                                Nihil deleniti consectetur suscipit itaque provident alias, repellat maiores
+                                consequatur ex quia error a sed quis commodi. Quo, voluptate.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Equipo Protección Personal (EPP)
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi recusandae rem
+                                quidem possimus saepe corrupti sit repellendus vero animi praesentium alias expedita
+                                fuga porro amet, quae earum debitis incidunt nobis!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Guantes de protección (EPP)
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, fuga. Adipisci quos
+                                eos explicabo unde odio officiis sed cum nam, natus atque consectetur qui similique
+                                quae, voluptas quas? Illo, fugiat!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseConsumibles" aria-expanded="false"
+                                aria-controls="collapseConsumibles">
+                                Consumibles
+                            </button>
+                        </h2>
+                        <div id="collapseConsumibles" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id. Deserunt natus
+                                rerum deleniti reiciendis numquam sequi delectus neque officiis quasi, omnis a error
+                                impedit earum, atque voluptates, nisi ducimus?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseVehiculos" aria-expanded="false"
+                                aria-controls="collapseVehiculos">
+                                Repuestos vehículos
+                            </button>
+                        </h2>
+                        <div id="collapseVehiculos" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id. Deserunt natus
+                                rerum deleniti reiciendis numquam sequi delectus neque officiis quasi, omnis a error
+                                impedit earum, atque voluptates, nisi ducimus?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseEscaleras" aria-expanded="false"
+                                aria-controls="collapseEscaleras">
+                                Escaleras
+                            </button>
+                        </h2>
+                        <div id="collapseEscaleras" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, id. Deserunt natus
+                                rerum deleniti reiciendis numquam sequi delectus neque officiis quasi, omnis a error
+                                impedit earum, atque voluptates, nisi ducimus?
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
     </main>
 
@@ -27,7 +195,7 @@
     <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
     <!-- Llamada al controlador de la página web -->
     <!-- ! cambiar el link js para el controntrolador -->
-     <script src="../../controllers/admin/perfil.js"></script>
+    <script src="../../controllers/admin/perfil.js"></script>
 
 </body>
 
