--- a/views/admin/perfil.html
+++ b/views/admin/perfil.html
@@ -15,36 +15,45 @@
     <main>
         <h2 id="mainTitle"></h2>
         <div class="d-flex justify-content-center">
-            <form class="row d-flex justify-content-center text-center col-7 " id="profileForm">
-                <div class="col-12 d-flex justify-content-center">
-                    <div>
-                        <h3 for="profileImage" class="form-label d-block display-6">Imagen perfil</h3>
-                        <div class="rounded-circle border overflow-hidden" style="width: 200px;">
-                            <img src="../../resources/images/error/404Administrador.png" alt="Imagen de perfil"
-                                id="profileImage" class="img-fluid">
+            <div class="row d-flex justify-content-center text-center col-7 " id="">
+
+                <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center">
+                    <div class="">
+                        <h3 for="imagenAdministradorInfo" class="form-label d-block display-6">Imagen perfil</h3>
+                        <div class="my-5 rounded-circle border overflow-hidden" style="width: 200px;">
+                            <img src="../../api/images/admin/"
+                                onerror="this.onerror=null; this.src='../../resources/images/error/404Administrador.png';"
+                                alt="Imagen de perfil" id="imagenAdministradorInfo" class="img-fluid">
                         </div>
+                        <!-- ? boton para editar los datos del personal -->
+                        <div class="d-flex flex-column align-items-center">
+                            <button type="button" class="btn btn-primary mb-2" onclick="openUpdate()">Editar
+                                perfil</button>
+                            <button type="button" class="btn btn-warning" onclick="openPassword()">Cambiar
+                                clave</button>
+                        </div>
+
                     </div>
                 </div>
 
-                <div class="col-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <h2 for="inputField1" class="form-label display-6">Datos Empleado </h2>
                     <h2 for="">Nombres</h2>
-                    <p class="texto-perfil" id="nombreAdministrador"></p>
-                    <p id="apellidoAdministrador"></p>
+                    <p class="texto-perfil" id="nombreAdministradorInfo"></p>
+                    <p id="apellidoAdministradorInfo"></p>
 
                     <h2 for="">Numero de teléfono</h2>
-                    <p id="telefonoAdministrador"></p>
+                    <p id="telefonoAdministradorInfo"></p>
 
                     <h2 for="">usuario</h2>
-                    <p id="usuarioAdministrador"></p>
+                    <p id="usuarioAdministradorInfo"></p>
 
                     <h2 for="">Correo electrónico</h2>
-                    <p id="correoAdministrador"></p>
+                    <p id="correoAdministradorInfo"></p>
                 </div>
 
-            </form>
-            <div class="col-12">
                 <h4 for="input  Field1" class="form-label display-6 mb-4">Historial Administrador</h4>
+
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
@@ -55,29 +64,27 @@
                         </h2>
                         <div id="collapseCables" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <div class="row" id="cablesBody">
 
-                                    <div class="col-lg-4 col-md-12 col-sm-12">
-                                        <div class="d-flex justify-content-center align-items-center rounded-circle border overflow-hidden"
-                                            style="width: 200px; height: 200px;">
-                                            <img src="../../resources/images/profile/user.png" alt="Imagen de Historial"
-                                                id="cablesImage" class="img-fluid">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-8 col-md-12 col-sm-12">
-                                        <h5 class="">Nombre del cable</h5>
-                                        <p class="card-title ">${row.nombre_cable}</p>
-                                        <h5 class="">Descripción del cable</h5>
-                                        <p class="card-text ">${row.descripcion_cable}</p>
-                                        <h5 class="">Longitud cable</h5>
-                                        <p class="card-text ">${row.longitud_cable} Metros MT.</p>
-                                        <h5 class="">Estado del cable</h5>
-                                        <p class="card-text "><i class="${icon}"></i></p>
-                                    </div>
-                                    <!-- * próximamente -->
-                                    <!-- <button type="button" class="btn btn-info mt-4">Mas información</button> -->
+                                <div id="carouselExample" class="carousel slide">
+                                    <div class="carousel-inner" id="cablesBody">
 
+                                    </div>
+                                    <button class="carousel-control-prev text-black" type="button"
+                                        data-bs-target="#carouselExample" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">anterior</span>
+                                    </button>
+                                    <button class="carousel-control-next text-black" type="button"
+                                        data-bs-target="#carouselExample" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">siguiente</span>
+                                    </button>
                                 </div>
+
+
+                                <!-- * próximamente -->
+                                <!-- <button type="button" class="btn btn-info mt-4">Mas información</button> -->
+
                             </div>
                         </div>
                     </div>
@@ -181,7 +188,111 @@
             </div>
         </div>
 
+        <!-- ? modal para editar datos de cuenta -->
 
+        <!-- ? Componente Modal para editar el registro -->
+        <div class="modal fade" id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="modalTitle" aria-hidden="true">
+            <div class="modal-dialog modal-md modal-dialog-centered">
+                <div class="modal-content bg-dark text-white">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="modalTitle"></h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <!-- Formulario para crear o actualizar un registro -->
+                    <form action="" id="saveForm">
+                        <div class="container">
+                            <div class="row my-3 justify-content-center ">
+                                <!-- <h1 class="text-grey">Datos personales</h1> -->
+                                <!-- Input para seleccionar la imagen -->
+                                <div class="col-12 text-center"> <!-- Asegura el centrado de la imagen -->
+                                    <label for="imagenAdmin" style="cursor: pointer;">
+                                        <img id="imagenMuestra"
+                                            class="rounded mx-auto d-block img-fluid mt-3 border border-3 border-secondary-subtle rounded-circle imagen_R"
+                                            src="../../api/images/admin/"
+                                            onerror="this.onerror=null; this.src='../../resources/images/error/404Administrador.png';"
+                                            id="imagenVisualAdmin" alt="ERROR FOTO MODAL" width="200px" height="200px">
+                                    </label>
+                                    <input id="imagenAdmin" type="file" name="imagenAdmin" class="form-control d-none"
+                                        accept=".png, .jpg">
+                                </div>
+                                <input type="number" class="d-none" id="idAdministrador" name="idAdministrador">
+
+                                <div class="col-lg-6 col-md-12 col-sm-12">
+                                    <label class="form-label">Nombre(s)</label>
+                                    <input type="text" id="nombreAdmin" name="nombreAdmin" autocomplete="off"
+                                        class="form-control" required>
+                                </div>
+                                <div class="col-lg-6 col-md-12 col-sm-12">
+                                    <label class="form-label">Apellido</label>
+                                    <input type="text" id="apellidoAdmin" name="apellidoAdmin" autocomplete="off"
+                                        class="form-control" required>
+                                </div>
+                                <div class="col-lg-6 col-md-12 col-sm-12">
+                                    <label class="form-label">Usuario</label>
+                                    <input type="text" id="usuarioAdmin" name="usuarioAdmin" autocomplete="off"
+                                        class="form-control" required>
+                                </div>
+                                <div class="col-lg-6 col-md-12 col-sm-12">
+                                    <label class="form-label">Teléfono</label>
+                                    <input type="tel" id="telefonoAdmin" name="telefonoAdmin" autocomplete="off"
+                                        class="form-control" required>
+                                </div>
+                                <div class="col-lg-6 col-md-12 col-sm-12">
+                                    <label class="form-label">Correo Electrónico</label>
+                                    <input type="email" id="correoAdmin" name="correoAdmin" autocomplete="off"
+                                        class="form-control" required>
+                                </div>
+                            </div>
+                            <div class="justify-content-center text-center mt-3">
+                                <button type="submit" class="btn btn-success">guardar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Componente Modal para mostrar el formulario de cambio de contraseña -->
+        <div class="modal fade" id="passwordModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="modalTitle" aria-hidden="true">
+            <div class="modal-dialog modal-md modal-dialog-centered">
+                <!-- Contenido del componente Modal -->
+                <div class="modal-content bg-dark text-white">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="modalTitle">Cambiar contraseña</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <!-- Formulario para actualizar contraseña -->
+                    <form id="passwordForm">
+                        <div class="modal-body row g-3">
+                            <div class="col-sm-12 col-md-6 offset-md-3">
+                                <label for="claveActual" class="form-label">Contraseña actual</label>
+                                <input id="claveActual" type="password" name="claveActual" class="form-control"
+                                    required>
+                            </div>
+                            <div class="col-12 text-center">
+                                <span>CONTRASEÑA NUEVA</span>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="claveNueva" class="form-label">Contraseña</label>
+                                <input id="claveNueva" type="password" name="claveNueva" class="form-control" required>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="confirmarClave" class="form-label">Confirmar contraseña</label>
+                                <input id="confirmarClave" type="password" name="confirmarClave" class="form-control"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="reset" class="btn btn-secondary">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
 
     </main>
 
